[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/gui/Theme.tres" type="Theme" id=1]
[ext_resource path="res://src/menus/CuratorMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/gui/icons/powerupYellow_star.png" type="Texture" id=3]

[node name="CuratorMenu" type="Control"]
margin_left = 1440.0
margin_right = 1800.0
margin_bottom = 640.0
rect_min_size = Vector2( 360, 640 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_top = 60.0
margin_right = 360.0
margin_bottom = 100.0
text = "CURATOR"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 60.0
margin_top = 120.0
margin_right = 296.0
margin_bottom = 150.0
text = "Collect New Gallary Pictures!"

[node name="Options" type="VBoxContainer" parent="."]
margin_top = 60.0
margin_right = 360.0
margin_bottom = 580.0
alignment = 1

[node name="Label" type="Label" parent="Options"]
margin_top = 81.0
margin_right = 360.0
margin_bottom = 111.0

[node name="Panel" type="Panel" parent="Options"]
margin_top = 115.0
margin_right = 360.0
margin_bottom = 395.0
rect_min_size = Vector2( 320, 280 )

[node name="Coins" type="Button" parent="Options/Panel"]
margin_left = 40.0
margin_top = 43.0
margin_right = 320.0
margin_bottom = 103.0
text = "Roll - 20 Coins"

[node name="Trade" type="Button" parent="Options/Panel"]
margin_left = 40.0
margin_top = 163.0
margin_right = 320.0
margin_bottom = 223.0
text = "Roll - 5 Tokens"

[node name="Tokens" type="HBoxContainer" parent="Options"]
margin_top = 399.0
margin_right = 360.0
margin_bottom = 439.0
alignment = 1

[node name="Icon" type="TextureRect" parent="Options/Tokens"]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Options/Tokens"]
margin_left = 94.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 35.0
text = "Duplicate Tokens"

[node name="TokenValue" type="Label" parent="Options/Tokens"]
margin_left = 230.0
margin_right = 310.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
text = "999999"
align = 2
valign = 1

[node name="Result" type="Panel" parent="."]
visible = false
margin_top = 60.0
margin_right = 360.0
margin_bottom = 540.0

[node name="Title" type="Label" parent="Result"]
margin_right = 40.0
margin_bottom = 30.0
rect_min_size = Vector2( 360, 60 )
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Result"]
margin_left = 20.0
margin_top = 60.0
margin_right = 340.0
margin_bottom = 380.0
rect_min_size = Vector2( 320, 320 )
expand = true

[node name="Duplicate" type="Label" parent="Result"]
margin_top = 395.0
margin_right = 360.0
margin_bottom = 425.0
text = "Duplicates grant a Trade-in Token"
align = 1
valign = 1

[node name="Accept" type="Button" parent="Result"]
margin_left = 80.0
margin_top = 430.0
margin_right = 280.0
margin_bottom = 470.0
text = "ACCEPT"

[connection signal="pressed" from="Options/Panel/Coins" to="." method="_on_Coins_pressed"]
[connection signal="pressed" from="Options/Panel/Trade" to="." method="_on_Trade_pressed"]
[connection signal="pressed" from="Result/Accept" to="." method="_on_Accept_pressed"]
